--- a/index.html
+++ b/index.html
@@ -4,83 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Your Name - CV</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      background-color: #f4f4f4;
-    }
-    h1, h2 {
-      color: #333;
-    }
-    h1 {
-      font-size: 36px;
-    }
-    h2 {
-      font-size: 24px;
-    }
-    .container {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      max-width: 800px;
-      margin: auto;
-      box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
-    }
-    .section {
-      margin-bottom: 20px;
-    }
-    ul {
-      list-style-type: none;
-      padding: 0;
-    }
-    ul li {
-      padding: 5px 0;
-    }
-  </style>
+  <title>Your Name - Professional CV</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
   <div class="container">
-    <header>
-      <h1>Your Name</h1>
-      <p>Email: yourname@example.com | Phone: +1234567890 | Location: City, Country</p>
+    <header class="header">
+      <div class="header-content">
+        <h1>Your Name</h1>
+        <p class="contact-info">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890 | Location: City, Country</p>
+      </div>
     </header>
 
-    <section class="section">
+    <section class="summary section">
       <h2>Summary</h2>
-      <p>A short paragraph describing your professional background, skills, and what you’re looking for.</p>
+      <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], and known for [Strength]. Looking for opportunities in [desired role/field].</p>
     </section>
 
-    <section class="section">
-      <h2>Experience</h2>
-      <ul>
-        <li><strong>Job Title</strong> - Company Name (Year Start - Year End)</li>
-        <p>Describe your responsibilities, achievements, and skills gained here.</p>
-        <li><strong>Job Title</strong> - Company Name (Year Start - Year End)</li>
-        <p>Describe your responsibilities, achievements, and skills gained here.</p>
-      </ul>
+    <section class="experience section">
+      <h2>Professional Experience</h2>
+      <div class="job">
+        <h3>Job Title - Company Name</h3>
+        <p class="job-dates">From Date - To Date</p>
+        <ul>
+          <li>Key responsibility or achievement 1</li>
+          <li>Key responsibility or achievement 2</li>
+          <li>Key responsibility or achievement 3</li>
+        </ul>
+      </div>
+      <div class="job">
+        <h3>Job Title - Company Name</h3>
+        <p class="job-dates">From Date - To Date</p>
+        <ul>
+          <li>Key responsibility or achievement 1</li>
+          <li>Key responsibility or achievement 2</li>
+          <li>Key responsibility or achievement 3</li>
+        </ul>
+      </div>
     </section>
 
-    <section class="section">
+    <section class="education section">
       <h2>Education</h2>
-      <ul>
-        <li><strong>Degree Name</strong> - University Name (Year Start - Year End)</li>
-        <p>Details about your studies, any projects or special achievements.</p>
-      </ul>
+      <div class="education-item">
+        <h3>Degree Name - University Name</h3>
+        <p class="edu-dates">Year Start - Year End</p>
+        <p>Details or honors related to your degree.</p>
+      </div>
     </section>
 
-    <section class="section">
+    <section class="skills section">
       <h2>Skills</h2>
-      <ul>
+      <ul class="skills-list">
         <li>Skill 1</li>
         <li>Skill 2</li>
         <li>Skill 3</li>
+        <li>Skill 4</li>
       </ul>
     </section>
 
-    <section class="section">
+    <section class="certifications section">
       <h2>Certifications</h2>
       <ul>
         <li>Certification Name - Date</li>
@@ -88,14 +71,21 @@
       </ul>
     </section>
 
-    <section class="section">
+    <section class="projects section">
       <h2>Projects</h2>
-      <ul>
-        <li><strong>Project Title</strong> - Description of the project, technologies used, and your role.</li>
-        <li><strong>Project Title</strong> - Description of the project, technologies used, and your role.</li>
-      </ul>
+      <div class="project-item">
+        <h3>Project Title</h3>
+        <p>Description of the project, technologies used, and your role.</p>
+      </div>
+      <div class="project-item">
+        <h3>Project Title</h3>
+        <p>Description of the project, technologies used, and your role.</p>
+      </div>
     </section>
 
+    <footer>
+      <p>© 2024 Your Name</p>
+    </footer>
   </div>
 
 </body>
