--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Your Name - Professional CV</title>
+  <title>Mohamed Samir Makled - Technology Operations Manager</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -12,8 +12,8 @@
   <div class="container">
     <header class="header">
       <div class="header-content">
-        <h1>Your Name</h1>
-        <p class="contact-info">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890 | Location: City, Country</p>
+        <h1>Mohamed Samir Makled</h1>
+        <p class="contact-info">Email: <a href="mailto:makledm87@gmail.com">makledm87@gmail.com</a> | Phone: +97477270078 | Location: Doha, Qatar</p>
       </div>
     </header>
 
