--- a/index.html
+++ b/index.html
@@ -4,86 +4,78 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Mohamed Samir Makled - Technology Operations Manager</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Your Name - Professional CV</title>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  
+  <!-- Optional Bootstrap JavaScript for interactive components -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+  <link rel="stylesheet" href="styles.css"> <!-- Link to your custom CSS -->
 </head>
 <body>
 
-  <div class="container">
-    <header class="header">
-      <div class="header-content">
-        <h1>Mohamed Samir Makled</h1>
-        <p class="contact-info">Email: <a href="mailto:makledm87@gmail.com">makledm87@gmail.com</a> | Phone: +97477270078 | Location: Doha, Qatar</p>
-      </div>
+  <div class="container my-5">
+    <header class="text-center mb-4">
+      <h1>Your Name</h1>
+      <p class="lead">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890 | Location: City, Country</p>
     </header>
 
-    <section class="summary section">
-      <h2>Summary</h2>
-      <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], and known for [Strength]. Looking for opportunities in [desired role/field].</p>
+    <section class="summary mb-4">
+      <h2 class="h4 text-primary">Summary</h2>
+      <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], known for [Strength]. Looking for opportunities in [desired role/field].</p>
     </section>
 
-    <section class="experience section">
-      <h2>Professional Experience</h2>
-      <div class="job">
-        <h3>Job Title - Company Name</h3>
-        <p class="job-dates">From Date - To Date</p>
-        <ul>
-          <li>Key responsibility or achievement 1</li>
-          <li>Key responsibility or achievement 2</li>
-          <li>Key responsibility or achievement 3</li>
-        </ul>
-      </div>
-      <div class="job">
-        <h3>Job Title - Company Name</h3>
-        <p class="job-dates">From Date - To Date</p>
-        <ul>
-          <li>Key responsibility or achievement 1</li>
-          <li>Key responsibility or achievement 2</li>
-          <li>Key responsibility or achievement 3</li>
+    <section class="experience mb-4">
+      <h2 class="h4 text-primary">Professional Experience</h2>
+      <div class="job mb-3">
+        <h3 class="h5">Job Title - Company Name</h3>
+        <p class="text-muted">From Date - To Date</p>
+        <ul class="list-unstyled">
+          <li><i class="fas fa-check"></i> Key responsibility or achievement 1</li>
+          <li><i class="fas fa-check"></i> Key responsibility or achievement 2</li>
+          <li><i class="fas fa-check"></i> Key responsibility or achievement 3</li>
         </ul>
       </div>
     </section>
 
-    <section class="education section">
-      <h2>Education</h2>
-      <div class="education-item">
-        <h3>Degree Name - University Name</h3>
-        <p class="edu-dates">Year Start - Year End</p>
-        <p>Details or honors related to your degree.</p>
+    <section class="education mb-4">
+      <h2 class="h4 text-primary">Education</h2>
+      <div class="education-item mb-3">
+        <h3 class="h5">Degree Name - University Name</h3>
+        <p class="text-muted">Year Start - Year End</p>
       </div>
     </section>
 
-    <section class="skills section">
-      <h2>Skills</h2>
-      <ul class="skills-list">
-        <li>Skill 1</li>
-        <li>Skill 2</li>
-        <li>Skill 3</li>
-        <li>Skill 4</li>
+    <section class="skills mb-4">
+      <h2 class="h4 text-primary">Skills</h2>
+      <ul class="list-inline">
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 1</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 2</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 3</li>
       </ul>
     </section>
 
-    <section class="certifications section">
-      <h2>Certifications</h2>
+    <section class="certifications mb-4">
+      <h2 class="h4 text-primary">Certifications</h2>
       <ul>
         <li>Certification Name - Date</li>
         <li>Certification Name - Date</li>
       </ul>
     </section>
 
-    <section class="projects section">
-      <h2>Projects</h2>
-      <div class="project-item">
-        <h3>Project Title</h3>
-        <p>Description of the project, technologies used, and your role.</p>
-      </div>
-      <div class="project-item">
-        <h3>Project Title</h3>
+    <section class="projects mb-4">
+      <h2 class="h4 text-primary">Projects</h2>
+      <div class="project-item mb-3">
+        <h3 class="h5">Project Title</h3>
         <p>Description of the project, technologies used, and your role.</p>
       </div>
     </section>
 
-    <footer>
+    <footer class="text-center">
       <p>© 2024 Your Name</p>
     </footer>
   </div>
