--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <li>Certification Name - Date</li>
       </ul>
     </section>
-
+    
     <section class="projects mb-4">
       <h2 class="h4 text-primary">Projects</h2>
       <div class="project-item mb-3">
@@ -79,6 +79,15 @@
       <p>© 2024 Your Name</p>
     </footer>
   </div>
+
+  <section class="certifications mb-4">
+  <h2 class="h4 text-primary">Certifications</h2>
+  <ul>
+    <li class="badge badge-info">Certification 1 - Date</li>
+    <li class="badge badge-warning">Certification 2 - Date</li>
+  </ul>
+</section>
+
 
 </body>
 </html>
