--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
 </head>
 <body>
 
+  <h1 class="text-center text-primary">Your Name</h1>
+<p class="lead text-muted text-center">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890</p>
+
+<section class="summary">
+  <h2 class="h4 text-primary">Summary</h2>
+  <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], known for [Strength].</p>
+</section>
+
   <div class="container my-5">
     <header class="text-center mb-4">
       <h1>Your Name</h1>
@@ -79,15 +87,6 @@
       <p>© 2024 Your Name</p>
     </footer>
   </div>
-
-  <section class="certifications mb-4">
-  <h2 class="h4 text-primary">Certifications</h2>
-  <ul>
-    <li class="badge badge-info">Certification 1 - Date</li>
-    <li class="badge badge-warning">Certification 2 - Date</li>
-  </ul>
-</section>
-
-
+  
 </body>
 </html>
