--- a/index.html
+++ b/index.html
@@ -3,90 +3,120 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Your Name - Professional CV</title>
+  <title>Personal Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  
-  <!-- Optional Bootstrap JavaScript for interactive components -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
-  <link rel="stylesheet" href="styles.css"> <!-- Link to your custom CSS -->
+    .tab {
+      display: flex;
+      background-color: #333;
+    }
+
+    .tab button {
+      background-color: inherit;
+      color: white;
+      padding: 14px 16px;
+      cursor: pointer;
+      width: 25%;
+      border: none;
+      outline: none;
+      text-align: center;
+    }
+
+    .tab button:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .tab button.active {
+      background-color: #666;
+    }
+
+    .tabcontent {
+      display: none;
+      padding: 20px;
+      background-color: white;
+      border-top: none;
+    }
+
+    .tabcontent.active {
+      display: block;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    p {
+      font-size: 16px;
+    }
+  </style>
 </head>
 <body>
 
-  <h1 class="text-center text-primary">Your Name</h1>
-<p class="lead text-muted text-center">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890</p>
+<h2>Welcome to My Personal Page</h2>
 
-<section class="summary">
-  <h2 class="h4 text-primary">Summary</h2>
-  <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], known for [Strength].</p>
-</section>
+<div class="tab">
+  <button class="tablinks" onclick="openTab(event, 'PersonalDetails')" id="defaultOpen">Personal Details</button>
+  <button class="tablinks" onclick="openTab(event, 'Hobbies')">Hobbies</button>
+  <button class="tablinks" onclick="openTab(event, 'CV')">CV</button>
+  <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
+</div>
 
-  <div class="container my-5">
-    <header class="text-center mb-4">
-      <h1>Your Name</h1>
-      <p class="lead">Email: <a href="mailto:yourname@example.com">yourname@example.com</a> | Phone: +1234567890 | Location: City, Country</p>
-    </header>
+<div id="PersonalDetails" class="tabcontent">
+  <h3>Personal Details</h3>
+  <p>Name: John Doe</p>
+  <p>Age: 30</p>
+  <p>Location: New York, USA</p>
+</div>
 
-    <section class="summary mb-4">
-      <h2 class="h4 text-primary">Summary</h2>
-      <p>Professional with X years of experience in [Industry/Field]. Specialized in [Skill] and [Skill], known for [Strength]. Looking for opportunities in [desired role/field].</p>
-    </section>
+<div id="Hobbies" class="tabcontent">
+  <h3>Hobbies</h3>
+  <p>Photography, Traveling, Reading, Coding</p>
+</div>
 
-    <section class="experience mb-4">
-      <h2 class="h4 text-primary">Professional Experience</h2>
-      <div class="job mb-3">
-        <h3 class="h5">Job Title - Company Name</h3>
-        <p class="text-muted">From Date - To Date</p>
-        <ul class="list-unstyled">
-          <li><i class="fas fa-check"></i> Key responsibility or achievement 1</li>
-          <li><i class="fas fa-check"></i> Key responsibility or achievement 2</li>
-          <li><i class="fas fa-check"></i> Key responsibility or achievement 3</li>
-        </ul>
-      </div>
-    </section>
+<div id="CV" class="tabcontent">
+  <h3>CV</h3>
+  <p><strong>Education:</strong></p>
+  <ul>
+    <li>Bachelor of Science in Computer Science - XYZ University</li>
+    <li>Master of Science in Information Technology - ABC University</li>
+  </ul>
+  <p><strong>Work Experience:</strong></p>
+  <ul>
+    <li>Software Engineer at TechCorp (2016 - Present)</li>
+    <li>IT Consultant at ConsultCo (2013 - 2016)</li>
+  </ul>
+</div>
 
-    <section class="education mb-4">
-      <h2 class="h4 text-primary">Education</h2>
-      <div class="education-item mb-3">
-        <h3 class="h5">Degree Name - University Name</h3>
-        <p class="text-muted">Year Start - Year End</p>
-      </div>
-    </section>
+<div id="Contact" class="tabcontent">
+  <h3>Contact</h3>
+  <p>Email: john.doe@example.com</p>
+  <p>Phone: +123-456-7890</p>
+</div>
 
-    <section class="skills mb-4">
-      <h2 class="h4 text-primary">Skills</h2>
-      <ul class="list-inline">
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 1</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 2</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Skill 3</li>
-      </ul>
-    </section>
+<script>
+  function openTab(evt, tabName) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(tabName).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
 
-    <section class="certifications mb-4">
-      <h2 class="h4 text-primary">Certifications</h2>
-      <ul>
-        <li>Certification Name - Date</li>
-        <li>Certification Name - Date</li>
-      </ul>
-    </section>
-    
-    <section class="projects mb-4">
-      <h2 class="h4 text-primary">Projects</h2>
-      <div class="project-item mb-3">
-        <h3 class="h5">Project Title</h3>
-        <p>Description of the project, technologies used, and your role.</p>
-      </div>
-    </section>
+  document.getElementById("defaultOpen").click();
+</script>
 
-    <footer class="text-center">
-      <p>© 2024 Your Name</p>
-    </footer>
-  </div>
-  
 </body>
 </html>
