--- a/index.html
+++ b/index.html
@@ -1,122 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Page</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #f4f4f4;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Professional Personal Page</title>
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 
-    .tab {
-      display: flex;
-      background-color: #333;
-    }
-
-    .tab button {
-      background-color: inherit;
-      color: white;
-      padding: 14px 16px;
-      cursor: pointer;
-      width: 25%;
-      border: none;
-      outline: none;
-      text-align: center;
-    }
-
-    .tab button:hover {
-      background-color: #ddd;
-      color: black;
-    }
-
-    .tab button.active {
-      background-color: #666;
-    }
-
-    .tabcontent {
-      display: none;
-      padding: 20px;
-      background-color: white;
-      border-top: none;
-    }
-
-    .tabcontent.active {
-      display: block;
-    }
-
-    h2 {
-      text-align: center;
-    }
-
-    p {
-      font-size: 16px;
-    }
-  </style>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <div class="container">
+        <h1 class="text-center my-4">Welcome to My Personal Page</h1>
 
-<h2>Welcome to My Personal Page</h2>
+        <!-- Navigation Tabs -->
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" id="personal-details-tab" data-toggle="tab" href="#personal-details" role="tab" aria-controls="personal-details" aria-selected="true">Personal Details</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="hobbies-tab" data-toggle="tab" href="#hobbies" role="tab" aria-controls="hobbies" aria-selected="false">Hobbies</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="cv-tab" data-toggle="tab" href="#cv" role="tab" aria-controls="cv" aria-selected="false">CV</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Contact</a>
+            </li>
+        </ul>
 
-<div class="tab">
-  <button class="tablinks" onclick="openTab(event, 'PersonalDetails')" id="defaultOpen">Personal Details</button>
-  <button class="tablinks" onclick="openTab(event, 'Hobbies')">Hobbies</button>
-  <button class="tablinks" onclick="openTab(event, 'CV')">CV</button>
-  <button class="tablinks" onclick="openTab(event, 'Contact')">Contact</button>
-</div>
+        <!-- Tab Content -->
+        <div class="tab-content my-4" id="myTabContent">
+            <!-- Personal Details -->
+            <div class="tab-pane fade show active" id="personal-details" role="tabpanel" aria-labelledby="personal-details-tab">
+                <h3>Personal Details</h3>
+                <p><strong>Name:</strong> John Doe</p>
+                <p><strong>Age:</strong> 30</p>
+                <p><strong>Location:</strong> New York, USA</p>
+            </div>
 
-<div id="PersonalDetails" class="tabcontent">
-  <h3>Personal Details</h3>
-  <p>Name: John Doe</p>
-  <p>Age: 30</p>
-  <p>Location: New York, USA</p>
-</div>
+            <!-- Hobbies -->
+            <div class="tab-pane fade" id="hobbies" role="tabpanel" aria-labelledby="hobbies-tab">
+                <h3>Hobbies</h3>
+                <ul>
+                    <li>Photography</li>
+                    <li>Traveling</li>
+                    <li>Reading</li>
+                    <li>Coding</li>
+                </ul>
+            </div>
 
-<div id="Hobbies" class="tabcontent">
-  <h3>Hobbies</h3>
-  <p>Photography, Traveling, Reading, Coding</p>
-</div>
+            <!-- CV -->
+            <div class="tab-pane fade" id="cv" role="tabpanel" aria-labelledby="cv-tab">
+                <h3>CV</h3>
+                <p><strong>Education:</strong></p>
+                <ul>
+                    <li>Bachelor of Science in Computer Science - XYZ University</li>
+                    <li>Master of Science in Information Technology - ABC University</li>
+                </ul>
+                <p><strong>Work Experience:</strong></p>
+                <ul>
+                    <li>Software Engineer at TechCorp (2016 - Present)</li>
+                    <li>IT Consultant at ConsultCo (2013 - 2016)</li>
+                </ul>
+            </div>
 
-<div id="CV" class="tabcontent">
-  <h3>CV</h3>
-  <p><strong>Education:</strong></p>
-  <ul>
-    <li>Bachelor of Science in Computer Science - XYZ University</li>
-    <li>Master of Science in Information Technology - ABC University</li>
-  </ul>
-  <p><strong>Work Experience:</strong></p>
-  <ul>
-    <li>Software Engineer at TechCorp (2016 - Present)</li>
-    <li>IT Consultant at ConsultCo (2013 - 2016)</li>
-  </ul>
-</div>
+            <!-- Contact -->
+            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+                <h3>Contact</h3>
+                <p><strong>Email:</strong> john.doe@example.com</p>
+                <p><strong>Phone:</strong> +123-456-7890</p>
+            </div>
+        </div>
+    </div>
 
-<div id="Contact" class="tabcontent">
-  <h3>Contact</h3>
-  <p>Email: john.doe@example.com</p>
-  <p>Phone: +123-456-7890</p>
-</div>
-
-<script>
-  function openTab(evt, tabName) {
-    var i, tabcontent, tablinks;
-    tabcontent = document.getElementsByClassName("tabcontent");
-    for (i = 0; i < tabcontent.length; i++) {
-      tabcontent[i].style.display = "none";
-    }
-    tablinks = document.getElementsByClassName("tablinks");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].className = tablinks[i].className.replace(" active", "");
-    }
-    document.getElementById(tabName).style.display = "block";
-    evt.currentTarget.className += " active";
-  }
-
-  document.getElementById("defaultOpen").click();
-</script>
-
+    <!-- Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
