--- a/index.html
+++ b/index.html
@@ -54,19 +54,64 @@
                 </ul>
             </div>
 
-            <!-- CV -->
+            <!-- CV Section -->
             <div class="tab-pane fade" id="cv" role="tabpanel" aria-labelledby="cv-tab">
                 <h3>CV</h3>
-                <p><strong>Education:</strong></p>
-                <ul>
-                    <li>Bachelor of Science in Computer Science - XYZ University</li>
-                    <li>Master of Science in Information Technology - ABC University</li>
-                </ul>
-                <p><strong>Work Experience:</strong></p>
-                <ul>
-                    <li>Software Engineer at TechCorp (2016 - Present)</li>
-                    <li>IT Consultant at ConsultCo (2013 - 2016)</li>
-                </ul>
+                
+                <!-- Education Section -->
+                <div class="cv-section">
+                    <h4>Education</h4>
+                    <ul>
+                        <li><strong>Bachelor of Science in Computer Science</strong> - XYZ University (2010 - 2014)</li>
+                        <li><strong>Master of Science in Information Technology</strong> - ABC University (2014 - 2016)</li>
+                    </ul>
+                </div>
+
+                <!-- Work Experience Section -->
+                <div class="cv-section">
+                    <h4>Work Experience</h4>
+                    <ul>
+                        <li>
+                            <strong>Software Engineer</strong> at TechCorp (2016 - Present)
+                            <ul>
+                                <li>Developed scalable web applications used by over 1 million users.</li>
+                                <li>Led a team of 5 developers in creating a custom e-commerce platform.</li>
+                                <li>Implemented automated testing processes, reducing bugs by 30%.</li>
+                                <li>Worked closely with stakeholders to gather requirements and deliver solutions on time.</li>
+                            </ul>
+                        </li>
+                        <li>
+                            <strong>IT Consultant</strong> at ConsultCo (2013 - 2016)
+                            <ul>
+                                <li>Provided IT consultation services to small and medium-sized enterprises.</li>
+                                <li>Developed custom software solutions for over 10 clients, resulting in increased efficiency.</li>
+                                <li>Worked with clients to improve their digital infrastructure, resulting in a 20% increase in productivity.</li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+
+                <!-- Skills Section -->
+                <div class="cv-section">
+                    <h4>Skills</h4>
+                    <ul class="skills-list">
+                        <li><strong>Programming Languages:</strong> JavaScript, Python, Java, C#</li>
+                        <li><strong>Web Technologies:</strong> HTML5, CSS3, Bootstrap, React, Angular</li>
+                        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
+                        <li><strong>Version Control:</strong> Git, GitHub, Bitbucket</li>
+                        <li><strong>Project Management:</strong> Agile, Scrum</li>
+                    </ul>
+                </div>
+
+                <!-- Certifications Section -->
+                <div class="cv-section">
+                    <h4>Certifications</h4>
+                    <ul>
+                        <li>Certified Scrum Master (CSM)</li>
+                        <li>AWS Certified Solutions Architect – Associate</li>
+                        <li>Microsoft Certified: Azure Developer Associate</li>
+                    </ul>
+                </div>
             </div>
 
             <!-- Contact -->
