--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- Professional Experience Section -->
     <section class="experience mb-4">
       <h2 class="h4 text-primary">Professional Experience</h2>
+      
       <!-- Job 1 -->
       <div class="job mb-3">
         <h3 class="h5">Senior Software Engineer - TechCorp</h3>
@@ -43,6 +44,7 @@
           <li><i class="fas fa-check"></i> Implemented CI/CD pipelines with Jenkins and Docker, improving deployment efficiency by 40%.</li>
         </ul>
       </div>
+      
       <!-- Job 2 -->
       <div class="job mb-3">
         <h3 class="h5">Software Engineer - Innovatech</h3>
@@ -68,19 +70,18 @@
       </div>
     </section>
 
-    <!-- Updated Skills Section -->
+    <!-- Skills Section -->
     <section class="skills mb-4">
       <h2 class="h4 text-primary">Skills</h2>
-      <div class="cv-section">
-        <h4>Skills</h4>
-        <ul class="skills-list">
-          <li><strong>Programming Languages:</strong> JavaScript, Python, Java, C#</li>
-          <li><strong>Web Technologies:</strong> HTML5, CSS3, Bootstrap, React, Angular</li>
-          <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
-          <li><strong>Version Control:</strong> Git, GitHub, Bitbucket</li>
-          <li><strong>Project Management:</strong> Agile, Scrum</li>
-        </ul>
-      </div>
+      <ul class="list-inline">
+        <li class="list-inline-item badge badge-secondary p-2 m-1">JavaScript</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">React.js</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Node.js</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Docker</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">AWS</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">Git</li>
+        <li class="list-inline-item badge badge-secondary p-2 m-1">CI/CD</li>
+      </ul>
     </section>
 
     <!-- Certifications Section -->
