--- a/index.html
+++ b/index.html
@@ -71,18 +71,17 @@
     </section>
 
     <!-- Skills Section -->
-    <section class="skills mb-4">
-      <h2 class="h4 text-primary">Skills</h2>
-      <ul class="list-inline">
-        <li class="list-inline-item badge badge-secondary p-2 m-1">JavaScript</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">React.js</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Node.js</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Docker</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">AWS</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">Git</li>
-        <li class="list-inline-item badge badge-secondary p-2 m-1">CI/CD</li>
-      </ul>
-    </section>
+<!-- Skills Section -->
+                <div class="cv-section">
+                    <h4>Skills</h4>
+                    <ul class="skills-list">
+                        <li><strong>Programming Languages:</strong> JavaScript, Python, Java, C#</li>
+                        <li><strong>Web Technologies:</strong> HTML5, CSS3, Bootstrap, React, Angular</li>
+                        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
+                        <li><strong>Version Control:</strong> Git, GitHub, Bitbucket</li>
+                        <li><strong>Project Management:</strong> Agile, Scrum</li>
+                    </ul>
+                </div>
 
     <!-- Certifications Section -->
     <section class="certifications mb-4">
