--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
       <div class="job mb-3">
         <h3 class="h5">Senior Software Engineer - TechCorp</h3>
         <p class="text-muted">Jan 2018 - Present</p>
-        <ul class="list-unstyled">
-          <li><i class="fas fa-check"></i> Led a team of 10 developers in designing and deploying a cloud-native application serving 1M+ users globally.</li>
-          <li><i class="fas fa-check"></i> Developed and maintained key microservices using Node.js and Python, reducing processing time by 20%.</li>
-          <li><i class="fas fa-check"></i> Implemented CI/CD pipelines with Jenkins and Docker, improving deployment efficiency by 40%.</li>
+        <ul class="list-disc">
+          <li>Led a team of 10 developers in designing and deploying a cloud-native application serving 1M+ users globally.</li>
+          <li>Developed and maintained key microservices using Node.js and Python, reducing processing time by 20%.</li>
+          <li>Implemented CI/CD pipelines with Jenkins and Docker, improving deployment efficiency by 40%.</li>
         </ul>
       </div>
       
@@ -49,10 +49,10 @@
       <div class="job mb-3">
         <h3 class="h5">Software Engineer - Innovatech</h3>
         <p class="text-muted">Jul 2014 - Dec 2017</p>
-        <ul class="list-unstyled">
-          <li><i class="fas fa-check"></i> Developed enterprise-grade web applications using React and Node.js for high-profile clients.</li>
-          <li><i class="fas fa-check"></i> Integrated RESTful APIs and optimized database queries to enhance application performance by 30%.</li>
-          <li><i class="fas fa-check"></i> Worked closely with clients to gather requirements and provide technical solutions.</li>
+        <ul class="list-disc">
+          <li>Developed enterprise-grade web applications using React and Node.js for high-profile clients.</li>
+          <li>Integrated RESTful APIs and optimized database queries to enhance application performance by 30%.</li>
+          <li>Worked closely with clients to gather requirements and provide technical solutions.</li>
         </ul>
       </div>
     </section>
@@ -71,22 +71,21 @@
     </section>
 
     <!-- Skills Section -->
-<!-- Skills Section -->
-                <div class="cv-section">
-                    <h4>Skills</h4>
-                    <ul class="skills-list">
-                        <li><strong>Programming Languages:</strong> JavaScript, Python, Java, C#</li>
-                        <li><strong>Web Technologies:</strong> HTML5, CSS3, Bootstrap, React, Angular</li>
-                        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
-                        <li><strong>Version Control:</strong> Git, GitHub, Bitbucket</li>
-                        <li><strong>Project Management:</strong> Agile, Scrum</li>
-                    </ul>
-                </div>
+    <section class="skills mb-4">
+      <h2 class="h4 text-primary">Skills</h2>
+      <ul class="list-disc">
+        <li><strong>Programming Languages:</strong> JavaScript, Python, Java, C#</li>
+        <li><strong>Web Technologies:</strong> HTML5, CSS3, Bootstrap, React, Angular</li>
+        <li><strong>Databases:</strong> MySQL, PostgreSQL, MongoDB</li>
+        <li><strong>Version Control:</strong> Git, GitHub, Bitbucket</li>
+        <li><strong>Project Management:</strong> Agile, Scrum</li>
+      </ul>
+    </section>
 
     <!-- Certifications Section -->
     <section class="certifications mb-4">
       <h2 class="h4 text-primary">Certifications</h2>
-      <ul>
+      <ul class="list-disc">
         <li>AWS Certified Solutions Architect – Associate (2020)</li>
         <li>Certified ScrumMaster (CSM) (2019)</li>
         <li>Microsoft Certified: Azure Developer Associate (2018)</li>
