--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div class="container my-5">
     <header class="text-center mb-4">
-      <h1>John Doe</h1>
+      <h1 class="name">John Doe</h1>
       <p class="lead">Email: <a href="mailto:johndoe@example.com">johndoe@example.com</a> | Phone: +1234567890 | Location: New York, USA</p>
     </header>
 
