--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li>Worked closely with clients to gather requirements and provide technical solutions.</li>
         </ul>
       </div>
-
+  </section>
 
             <li>Performance Monitoring: Implemented performance tracking systems to optimize deployments and ensure maximum efficiency.</li>
          
