--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
       <h2 class="h4 text-primary">Skills</h2>
       <ul class="list-disc">
         <li><strong>Strategic Leadership:</strong> Digital transformation strategies, Solution architecture, Client engagement.</li>
-        <li><strong>•	Emerging Technologies:</strong> IoT, AI, Cloud Computing, Edge Computing.</li>
-        <li><strong>•	Business Acumen:</strong> Technology consulting, Strategic partnerships, Stakeholder management.</li>
+        <li><strong>Emerging Technologies:</strong> IoT, AI, Cloud Computing, Edge Computing.</li>
+        <li><strong>Business Acumen:</strong> Technology consulting, Strategic partnerships, Stakeholder management.</li>
         <li><strong>Project Management:</strong> Agile methodologies, Scrum, Cross-functional leadership.</li>
         <li><strong>Technical Expertise:</strong> Embedded systems, IoT architecture, Software development Java, Python, C++, Performance optimization, SQL, HP QC, QTP, Load Runner, JUnit.</li>
         <li><strong>Soft Skills:</strong> Strong communication, Teamwork, Problem-solving, Time management</li>
@@ -128,7 +128,7 @@
         <li><h3 class="h5">Nominated as Expert Innovation Tester for Star of Science TV Show (2021)</h3>
       </div>
       <div class="Accomplishments-item mb-3">
-        <li><h3 class="h5">Nominated as Judge for the Qatar National Scratch Coding Competition (2018)</h3><
+        <li><h3 class="h5">Nominated as Judge for the Qatar National Scratch Coding Competition (2018)</h3>
       </div>
       <div class="Accomplishments-item mb-3">
         <li><h3 class="h5">Awarded 3rd Place in Microsoft Imagine Cup 2009 (Egypt)</h3>
