--- a/index.html
+++ b/index.html
@@ -122,21 +122,22 @@
     </section>
 
     <!-- ACCOMPLISHMENTS Section -->
-    <section class="Accomplishments mb-4">
-      <h2 class="h4 text-primary">Accomplishments</h2>
-      <div class="Accomplishments-item mb-3">
-        <h3 class="h5">Nominated as Expert Innovation Tester for Star of Science TV Show (2021)</h3><li>
-      </div>
-      <div class="Accomplishments-item mb-3">
-        <h3 class="h5">Nominated as Judge for the Qatar National Scratch Coding Competition (2018)</h3><li>
-      </div>
-      <div class="Accomplishments-item mb-3">
-        <h3 class="h5">Awarded 3rd Place in Microsoft Imagine Cup 2009 (Egypt)</h3><li>
-      </div>
-      <div class="Accomplishments-item mb-3">
-       <h3 class="h5">Contributed to air pollution research published by Weill Cornell Medicine in Qatar.</h3><li>
-      </div>
-    </section>
+   <section class="Accomplishments mb-4">
+  <h2 class="h4 text-primary">Accomplishments</h2>
+  <div class="Accomplishments-item mb-3">
+    <li><h3 class="h5">Nominated as Expert Innovation Tester for Star of Science TV Show (2021)</h3></li>
+  </div>
+  <div class="Accomplishments-item mb-3">
+    <li><h3 class="h5">Nominated as Judge for the Qatar National Scratch Coding Competition (2018)</h3></li>
+  </div>
+  <div class="Accomplishments-item mb-3">
+    <li><h3 class="h5">Awarded 3rd Place in Microsoft Imagine Cup 2009 (Egypt)</h3></li>
+  </div>
+  <div class="Accomplishments-item mb-3">
+    <li><h3 class="h5">Contributed to air pollution research published by Weill Cornell Medicine in Qatar.</h3></li>
+  </div>
+</section>
+
 
     <!-- Footer -->
     <footer class="text-center">
