--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="container my-5">
     <header class="text-center mb-4">
       <h1 class="name">Mohamed Samir Makled</h1>
-      <p class="lead">Email: <a href="mailto:makledm87@gmail.com">makledm87@gmail.com</a> | Phone: +97477270078 | Location: Doha, Qatar | LinkedIn: <a href="https://www.linkedin.com/in/mohamed-makled-177ab928/" target="_blank">LinkedIn Profile</a></p>
+      <p class="lead">Email: <a href="mailto:makledm87@gmail.com">makledm87@gmail.com</a> | Phone: +97477270078 | Location: Doha, Qatar | href="https://www.linkedin.com/in/mohamed-makled-177ab928/" target="_blank">LinkedIn Profile</a></p>
     </header>
 
     <!-- Summary Section -->
