--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
     <section class="certifications mb-4">
       <h2 class="h4 text-primary">Certifications</h2>
       <ul class="list-disc">
+        <li>Generative AI Overview for Project Managers – PMI (Nov 2024)</li>
+        <li>Project Management Professional (PMP)® – PMI (Nov 2024)</li>
         <li>Programming for the Internet of Things – University of California, Irvine (Dec 2016)</li>
         <li>Leadership Skills – HEC Paris (Nov 2015)</li>
         <li>ISTQB-ISEB Certified Tester Foundation Level – ISTBQ-ISEB (June 2014)</li>
