--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Summary Section -->
     <section class="summary mb-4">
       <h2 class="h4 text-primary">Summary</h2>
-      <p>Dynamic and results-driven Account Technology Strategist with over 13 years of experience delivering innovative IoT and AI solutions across various sectors including Smart Cities, Healthcare, and Logistics. Proven track record in driving digital transformation, aligning technology with business goals, and managing mega projects. Adept at fostering client relationships, defining technology roadmaps, and leading cross-functional teams to ensure successful solution delivery. Expertise in translating complex technological advancements into scalable, cost-effective solutions tailored to meet diverse client needs.</p>
+      <p>Dynamic and results-driven Account Technology Strategist with over 14 years of experience delivering innovative IoT and AI solutions across various sectors including Smart Cities, Healthcare, and Logistics. Proven track record in driving digital transformation, aligning technology with business goals, and managing mega projects. Adept at fostering client relationships, defining technology roadmaps, and leading cross-functional teams to ensure successful solution delivery. Expertise in translating complex technological advancements into scalable, cost-effective solutions tailored to meet diverse client needs.</p>
     </section>
 
     <!-- Professional Experience Section -->
@@ -114,7 +114,7 @@
     <section class="certifications mb-4">
       <h2 class="h4 text-primary">Certifications</h2>
       <ul class="list-disc">
-        <li>Generative AI Overview for Project Managers – PMI (Nov 2024)</li>
+        <li>P3O Foundation – Axelos (Nov 2024)</li>
         <li>Project Management Professional (PMP)® – PMI (Nov 2024)</li>
         <li>Programming for the Internet of Things – University of California, Irvine (Dec 2016)</li>
         <li>Leadership Skills – HEC Paris (Nov 2015)</li>
